--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 body {
     font-family: "Special Elite", serif;
     background-color: #f8f8f8;
-  background-image: url('src/assets/img.png');
+    background-image: url('/src/assets/background.png');
 }
 
 /* Paper sheet */
